# llm-compare

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/llm_compare/: README.md  cli.py  compare.py  cost_dashboard.py  retry_backoff.py  streaming.py  token_utils.py
src/llm_compare/eval/: batch_runner.py  dataset.py  eval_dataset.json  exact_match.py  harness.py  judge.py  regression_check.py  report.py  types.py
src/llm_compare/providers/: anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  openai_provider.py
tests/: prompts.txt  test_batch_runner.py  test_compare.py  test_cost_dashboard.py  test_eval_report.py  test_hello.py  test_retry_backoff.py  test_scored_compare.py  test_streaming.py  test_token_utils.py
