[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-compare"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "groq>=0.11.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
llm-compare = "llm_compare.cli:main"